# vaultaire

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  LICENCE  Makefile  README.markdown  RELEASE.md  Setup.hs  TODO  vaultaire.cabal  vaultaire1.cabal
bench/: ContentsListing.hs  ReaderAlgorithms.hs  Writer.hs
doc/: ContentsDaemonWireFormat.md
examples/C/: .gitignore  Makefile
examples/Haskell/: .gitignore  Makefile  example.cabal
examples/Haskell/tests/: collection.hs  sizeof.hs
examples/Python/: .gitignore  dataframe.py  framecat.py  generate_frames.py  unpack_frames.py
lib/: Marquise.hs
lib/Marquise/: Classes.hs  Client.hs  Config.hs  Contents.hs  Frame.hs  IO.hs  Server.hs  Types.hs  Writer.hs
lib/Marquise/IO/: Connection.hs  Contents.hs  FFI.hsc  Reader.hs  SpoolFile.hs  Writer.hs
lib/Vaultaire/: Broker.hs  Contents.hs  ContentsEncoding.hs  ContentsServer.hs  CoreTypes.hs  Daemon.hs  DayMap.hs  InternalStore.hs  Origin.hs  OriginMap.hs  Profiler.hs  Reader.hs  ReaderAlgorithms.hs  RollOver.hs  Telemetry.hs  Types.hs  Util.hs  Writer.hs
lib/Vaultaire/Classes/: WireFormat.hs
lib/Vaultaire/Types/: Address.hs  Common.hs  ContentsListBypass.hs  ContentsOperation.hs  ContentsResponse.hs  PassThrough.hs  ReadRequest.hs  ReadStream.hs  Response.hs  SourceDict.hs  WriteResult.hs
lib/Vaultaire/WireFormat/: Address.hs  Class.hs  ContentsOperation.hs  SourceDict.hs
lib/Vaultaire/WireFormats/: Class.hs  ContentsOperation.hs  SourceDict.hs
protobuf/: ContentsResponseBurst.proto  DataBurst.proto  DataFrame.proto  DataRequestMulti.proto  DataSourceResponse.proto  RequestMulti.proto  RequestRange.proto  VaultContent.proto  VaultHeader.proto  VaultPoint.proto
src/: BufferDaemon.hs  CommandRunners.hs  CoreTypes.hs  DaemonRunners.hs  DemoWave.hs  FilerDaemon.hs  IngestDaemon.hs  Inspect.hs  QueryProgram.hs  ReaderDaemon.hs  Receiver.hs  TelemetryProgram.hs  UtilityProgram.hs  Vault.hs  WireFormat.hs  bufferd.hs  exporter.hs  filerd.hs  ingestd.hs  query.hs  readerd.hs  telemetry.hs  vault.hs
src/Vaultaire/: CommunicationsThread.hs  CommunicationsThreads.hs  Daemon.hs  JournalFile.hs
src/Vaultaire/Conversion/: Reader.hs  Receiver.hs  Transmitter.hs  Writer.hs
src/Vaultaire/Internal/: CoreTypes.hs
src/Vaultaire/Persistence/: BucketObject.hs  Buckets.hs  Constants.hs  ContentsObject.hs  Hashes.hs  Locators.hs  ObjectFormat.hs
src/Vaultaire/Serialize/: Common.hs  DiskFormat.hs  WireFormat.hs
src/Version1/: CommunicationsThread.hs  JournalFile.hs
src/Version1/Conversion/: Reader.hs  Receiver.hs  Transmitter.hs  Writer.hs
src/Version1/Internal/: CoreTypes.hs
src/Version1/Persistence/: BucketObject.hs  Constants.hs  ContentsObject.hs
src/Version1/Serialize/: Common.hs  DiskFormat.hs  WireFormat.hs
src/broker/: Main.hs
src/broker/Vaultaire/: Broker.hs
src/check_vaultaire/: check_vaultaire.go
src/vaultaire/Vaultaire/: .Daemon.hs.swo  Broker.hs  Daemon.hs  DayMap.hs  OriginMap.hs  ReaderAlgorithms.hs  RollOver.hs  Writer.hs
tests/: ArbitraryInstances.hs  ClientServer.hs  ContentsTest.hs  Daemon.hs  DaemonTest.hs  DayMap.hs  DayMapTest.hs  Identity.hs  IdentityTest.hs  IntegrationTest.hs  InternalStoreTest.hs  KitchenSink.hs  ProfilerTest.hs  Reader.hs  ReaderAlgorithms.hs  ReaderTest.hs  TestHelpers.hs  TestSuite.hs  WireFormatsTest.hs  Writer.hs  WriterTest.hs  bench.hs  check.hs  convert.hs  roundtrip.hs  snippet.hs  telemetry.hs
tests/C/: framegrep.c  unpack_frames.c
tests/Python/: dataframe.py  unpack_frames.py
tests/c/: Makefile  framecat.c  generate_frames.c  unpack_frames.c
tests/data/: bletchley_DataBurst.json  bletchley_DataBurst.pb  bletchley_DataBurst.py  bletchley_DataFrame.json  bletchley_DataFrame.pb  bletchley_DataFrame.py  output_DataFrame.pb
tests/py/: Makefile  generate_frames.py
util/check_vaultaire/: Makefile
util/read_contents/: read_contents.go
