cabal-version:       >= 1.10
name:                vaultaire
version:             2.5.4
synopsis:            Data vault for metrics
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental

build-type:          Custom

source-repository    head
  type:              git
  location:          git@github.com:anchor/vaultaire.git


library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Vaultaire.Daemon,
                     Vaultaire.RollOver,
                     Vaultaire.Broker,
                     Vaultaire.DayMap,
                     Vaultaire.OriginMap,
                     Vaultaire.Writer,
                     Vaultaire.Reader,
                     Vaultaire.ReaderAlgorithms,
                     Vaultaire.InternalStore,
                     Vaultaire.Contents

  build-depends:     base >=4.7.0.1 && <5,
                     bytestring,
                     random,
                     zeromq4-haskell,
                     containers,
                     pipes-parse,
                     pipes,
                     mtl,
                     unordered-containers,
                     primitive,
                     vector-algorithms,
                     vector,
                     spool,
                     packer,
                     time,
                     pipes-concurrency,
                     async,
                     stm,
                     semigroups,
                     hslogger >= 1.2.4,
                     vaultaire-common >= 2.7.2,
                     text,
                     unix,
                     rados-haskell >= 3.0.3

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto


executable vault
  hs-source-dirs:    src
  main-is:           Vault.hs
  default-language:  Haskell2010

  build-depends:     base >= 4.7.0.1 && <5,
                     bytestring,
                     rados-haskell,
                     zeromq4-haskell,
                     optparse-applicative,
                     trifecta >= 1.4.3,
                     directory,
                     marquise >= 2.8.3,
                     containers,
                     vaultaire-common >= 2.7.2,
                     pipes,
                     hslogger >= 1.2.4,
                     async,
                     unix,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable inspect
  hs-source-dirs:    src
  main-is:           Inspect.hs
  default-language:  Haskell2010

  build-depends:     base >= 4.7.0.1 && <5,
                     bytestring,
                     rados-haskell,
                     zeromq4-haskell,
                     optparse-applicative,
                     trifecta >= 1.4.3,
                     directory,
                     marquise >= 2.8.3,
                     containers,
                     vaultaire-common >= 2.7.2,
                     pipes,
                     hslogger >= 1.2.4,
                     async,
                     unix,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable demowave
  hs-source-dirs:    src
  main-is:           DemoWave.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     rados-haskell,
                     zeromq4-haskell,
                     optparse-applicative,
                     trifecta,
                     directory,
                     marquise >= 2.8.3,
                     containers,
                     vaultaire-common >= 2.7.2,
                     pipes,
                     hslogger,
                     time,
                     data-binary-ieee754,
                     async,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           daemon-test
  hs-source-dirs:    tests
  main-is:           DaemonTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     async,
                     vaultaire-common >= 2.7.2,
                     semigroups,
                     bytestring,
                     vaultaire,
                     zeromq4-haskell,
                     rados-haskell >= 3.0.1

  ghc-options:       -fwarn-incomplete-patterns -threaded

test-suite           daymap-test
  hs-source-dirs:    tests
  main-is:           DayMapTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     bytestring,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


test-suite           writer-test
  hs-source-dirs:    tests
  main-is:           WriterTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     time,
                     pipes,
                     pipes-parse,
                     semigroups,
                     vaultaire-common >= 2.7.2,
                     zeromq4-haskell,
                     mtl,
                     bytestring,
                     unordered-containers,
                     rados-haskell >= 3.0.1,
                     vaultaire


  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


test-suite           reader-test
  hs-source-dirs:    tests
  main-is:           ReaderTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     time,
                     pipes,
                     pipes-parse,
                     semigroups,
                     vaultaire-common >= 2.7.2,
                     zeromq4-haskell,
                     mtl,
                     bytestring,
                     unordered-containers,
                     rados-haskell >= 3.0.1,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


test-suite           reader-algorithms-test
  hs-source-dirs:    tests
  main-is:           ReaderAlgorithms.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     QuickCheck,
                     primitive,
                     vaultaire-common >= 2.7.2,
                     spool,
                     vector,
                     mtl,
                     vector-algorithms,
                     bytestring,
                     vaultaire


  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           internal-store-test
  hs-source-dirs:    tests
  main-is:           InternalStoreTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     QuickCheck,
                     vector,
                     rados-haskell,
                     semigroups,
                     locators >= 0.2.4,
                     pipes-parse,
                     mtl,
                     vaultaire-common >= 2.7.2,
                     bytestring,
                     zeromq4-haskell,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           contents-test
  hs-source-dirs:    tests
  main-is:           ContentsTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     unordered-containers,
                     hashable,
                     text,
                     QuickCheck,
                     vector,
                     rados-haskell,
                     semigroups,
                     locators >= 0.2.4,
                     mtl,
                     marquise >= 2.8.3,
                     bytestring,
                     zeromq4-haskell,
                     vaultaire-common >= 2.7.2,
                     pipes,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           integration-test
  hs-source-dirs:    tests,src
  main-is:           IntegrationTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     unordered-containers,
                     text,
                     QuickCheck,
                     marquise >= 2.8.3,
                     bytestring,
                     pipes,
                     semigroups,
                     async,
                     hslogger >= 1.2.4,
                     zeromq4-haskell,
                     rados-haskell >= 3.0.1,
                     directory,
                     vaultaire-common >= 2.7.2,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

benchmark writer-bench
  hs-source-dirs:    bench, tests
  main-is:           Writer.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     zeromq4-haskell,
                     semigroups,
                     rados-haskell,
                     criterion,
                     vaultaire-common >= 2.7.2,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


benchmark reader-algorithms
  hs-source-dirs:    bench
  main-is:           ReaderAlgorithms.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     criterion,
                     vector,
                     spool,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

benchmark contents-listing
  hs-source-dirs:    bench
  main-is:           ContentsListing.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     criterion,
                     zeromq4-haskell,
                     vaultaire-common >= 2.7.2,
                     marquise >= 2.8.3,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

-- vim: set tabstop=21 expandtab:
