cabal-version:       >= 1.10
name:                vaultaire
version:             2.6.1.3
synopsis:            Data vault for metrics
description:         Data vault for metrics
license:             BSD3
license-file:        LICENCE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.8.3
stability:           experimental

build-type:          Custom

source-repository    head
  type:              git
  location:          git@github.com:anchor/vaultaire.git

flag network-uri
   description: Get Network.URI from the network-uri package
   default: True

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Vaultaire.Daemon,
                     Vaultaire.RollOver,
                     Vaultaire.Broker,
                     Vaultaire.DayMap,
                     Vaultaire.OriginMap,
                     Vaultaire.Writer,
                     Vaultaire.Reader,
                     Vaultaire.ReaderAlgorithms,
                     Vaultaire.InternalStore,
                     Vaultaire.Contents,
                     Vaultaire.Profiler

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=4.7.0.1 && <5,
                     bytestring,
                     blaze-markup <= 0.6.2,
                     random,
                     zeromq4-haskell,
                     containers,
                     pipes-parse,
                     pipes,
                     mtl,
                     transformers,
                     unordered-containers,
                     primitive,
                     vector-algorithms,
                     vector,
                     spool,
                     packer,
                     time,
                     pipes-concurrency,
                     async,
                     stm,
                     semigroups,
                     hslogger >= 1.2.4,
                     vaultaire-common >= 2.8.2,
                     text,
                     unix,
                     unix-time,
                     rados-haskell >= 3.0.3

  ghc-options:       -O2
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto


executable vault
  hs-source-dirs:    src
  main-is:           Vault.hs
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >= 4.7.0.1 && <5,
                     bytestring,
                     rados-haskell,
                     zeromq4-haskell,
                     optparse-applicative,
                     trifecta >= 1.4.3,
                     directory,
                     marquise >= 3.0.2,
                     containers,
                     vaultaire-common >= 2.8.2,
                     pipes,
                     hslogger >= 1.2.4,
                     async,
                     unix,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable inspect
  hs-source-dirs:    src
  main-is:           Inspect.hs
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >= 4.7.0.1 && <5,
                     bytestring,
                     rados-haskell,
                     zeromq4-haskell,
                     optparse-applicative,
                     trifecta >= 1.4.3,
                     directory,
                     marquise >= 3.0.2,
                     containers,
                     vaultaire-common >= 2.8.2,
                     pipes,
                     hslogger >= 1.2.4,
                     async,
                     unix,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable demowave
  hs-source-dirs:    src
  main-is:           DemoWave.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     rados-haskell,
                     zeromq4-haskell,
                     optparse-applicative,
                     trifecta,
                     directory,
                     marquise >= 3.0.2,
                     containers,
                     vaultaire-common >= 2.8.2,
                     pipes,
                     hslogger,
                     time,
                     data-binary-ieee754,
                     async,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable telemetry
  hs-source-dirs:    src
  main-is:           TelemetryProgram.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     network,
                     network-uri,
                     optparse-applicative >= 0.11.0,
                     zeromq4-haskell,
                     vaultaire-common >= 2.8.2,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           daemon-test
  hs-source-dirs:    tests
  main-is:           DaemonTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=3 && <5,
                     hspec,
                     async,
                     vaultaire-common >= 2.8.2,
                     semigroups,
                     bytestring,
                     vaultaire,
                     zeromq4-haskell,
                     rados-haskell >= 3.0.1

  ghc-options:       -fwarn-incomplete-patterns -threaded

test-suite           daymap-test
  hs-source-dirs:    tests
  main-is:           DayMapTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     bytestring,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


test-suite           writer-test
  hs-source-dirs:    tests
  main-is:           WriterTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     time,
                     pipes,
                     pipes-parse,
                     semigroups,
                     vaultaire-common >= 2.8.2,
                     zeromq4-haskell,
                     mtl,
                     bytestring,
                     unordered-containers,
                     rados-haskell >= 3.0.1,
                     vaultaire


  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


test-suite           reader-test
  hs-source-dirs:    tests
  main-is:           ReaderTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     time,
                     pipes,
                     pipes-parse,
                     semigroups,
                     vaultaire-common >= 2.8.2,
                     zeromq4-haskell,
                     mtl,
                     bytestring,
                     unordered-containers,
                     rados-haskell >= 3.0.1,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


test-suite           reader-algorithms-test
  hs-source-dirs:    tests
  main-is:           ReaderAlgorithms.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     QuickCheck,
                     primitive,
                     vaultaire-common >= 2.8.2,
                     spool,
                     vector,
                     mtl,
                     vector-algorithms,
                     bytestring,
                     vaultaire


  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           internal-store-test
  hs-source-dirs:    tests
  main-is:           InternalStoreTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     QuickCheck,
                     vector,
                     rados-haskell,
                     semigroups,
                     locators >= 0.2.4,
                     pipes-parse,
                     mtl,
                     vaultaire-common >= 2.8.2,
                     bytestring,
                     zeromq4-haskell,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           contents-test
  hs-source-dirs:    tests
  main-is:           ContentsTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     unordered-containers,
                     hashable,
                     text,
                     QuickCheck,
                     vector,
                     rados-haskell,
                     semigroups,
                     locators >= 0.2.4,
                     mtl,
                     marquise >= 3.0.2,
                     bytestring,
                     zeromq4-haskell,
                     vaultaire-common >= 2.8.2,
                     pipes,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           integration-test
  hs-source-dirs:    tests,src
  main-is:           IntegrationTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=3 && <5,
                     hspec,
                     containers,
                     unordered-containers,
                     text,
                     QuickCheck,
                     marquise >= 3.0.2,
                     bytestring,
                     pipes,
                     semigroups,
                     async,
                     hslogger >= 1.2.4,
                     zeromq4-haskell,
                     rados-haskell >= 3.0.1,
                     directory,
                     vaultaire-common >= 2.8.2,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

benchmark writer-bench
  hs-source-dirs:    bench, tests
  main-is:           Writer.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     zeromq4-haskell,
                     semigroups,
                     rados-haskell,
                     criterion,
                     vaultaire-common >= 2.8.2,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


benchmark reader-algorithms
  hs-source-dirs:    bench
  main-is:           ReaderAlgorithms.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     criterion,
                     vector,
                     spool,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

benchmark contents-listing
  hs-source-dirs:    bench
  main-is:           ContentsListing.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     criterion,
                     zeromq4-haskell,
                     vaultaire-common >= 2.8.2,
                     marquise >= 2.8.3,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           profiler-test
  hs-source-dirs:    tests,src
  main-is:           ProfilerTest.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  if flag(network-uri)
     build-depends: network-uri >= 2.6, network >= 2.6
  else
     build-depends: network-uri < 2.6, network < 2.6
  build-depends:     base >=3 && <5,
                     hspec,
                     QuickCheck,
                     marquise >= 3.0.2,
                     bytestring,
                     pipes,
                     semigroups,
                     async,
                     zeromq4-haskell,
                     rados-haskell >= 3.0.1,
                     mtl,
                     transformers,
                     vaultaire-common >= 2.8.2,
                     vaultaire

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

-- vim: set tabstop=21 expandtab:
