cabal-version:       >= 1.10
name:                vaultaire1
version:             0.4.2
synopsis:            Data vault for metrics
license:             BSD3
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2013-2014 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.6
stability:           experimental

build-type:          Custom

executable           exporter
  default-language:  Haskell2010

  build-depends:     base,
                     bytestring,
                     text,
                     containers >= 0.5,
                     unordered-containers,
                     network,
                     cereal,
                     uuid,
                     semigroups,
                     transformers,
                     mtl,
                     errors,
                     stm,
                     lz4,
                     stm-chans,
                     optparse-applicative,
                     zeromq4-haskell,
                     time,
                     type-level,
                     protobuf,
                     locators,
                     optparse-applicative,
                     async,
                     unix,
                     blaze-builder,
                     rados-haskell >= 3.0.0,
                     data-binary-ieee754,
                     vaultaire >= 2.0.2

  main-is:           exporter.hs
  hs-source-dirs:    src
  include-dirs:      .

  ghc-options:       -O2
                     -threaded
                     -rtsopts
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-do-bind

-- vim: set tabstop=21 expandtab:
