cabal-version:       >= 1.10
name:                vaultaire-protobuf-experiment
version:             0.0.0.1
synopsis:            Experimental snippets
license:             BSD3
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2013 Anchor Systems, Pty Ltd and Others
category:            Other
tested-with:         GHC == 7.6
stability:           experimental

build-type:          Simple

executable           snippet
  default-language:  Haskell2010

  build-depends:     base,
                     bytestring

  main-is:           snippet.hs
  hs-source-dirs:    src
  include-dirs:      .

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs
                     -funbox-strict-fields
                     -fno-warn-missing-signatures
                     -fno-warn-unused-binds
                     -fno-warn-unused-do-bind

  ghc-prof-options:  -prof -fprof-auto-top


source-repository    head
  type:              git
  location:          git://github.com/afcowie/not-applicable.git


-- vim: set tabstop=21 expandtab:
